// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetLabel renders WidgetLabel correctly with children 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-oj0na3"
  >
    <h2>
      Test Label
    </h2>
  </div>
</DocumentFragment>
`;

exports[`WidgetLabel renders WidgetLabel with additional props 1`] = `
<DocumentFragment>
  <div
    class="custom-class MuiBox-root css-oj0na3"
    data-testid="custom-label"
  >
    <h2>
      Custom Props
    </h2>
  </div>
</DocumentFragment>
`;
